--- a/fifa-2026.html
+++ b/fifa-2026.html
@@ -74,7 +74,8 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
                                         <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
@@ -130,7 +131,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/toronto-fifa-hero.jpeg)">
+                        <div id="hero-bg-image" style="background-image:url(images/toronto-fifa-hero.jpg)">
                         	<div class="hero-video-wrapper">
                                 <video loop muted class="bgvid">
                                     <source src="motion/Transistion-Set.mp4" type="video/mp4">
@@ -245,62 +246,6 @@
 										</div>
 										<!--/Row -->
 
-										<!-- Row -->
-										<div class="vc_row full">
-
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/fifa02.png" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
-
-										<!-- Row -->
-										<div class="vc_row full">
-
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/fifa03.png" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
-
-										<!-- Row -->
-										<div class="vc_row full">
-
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/fifa04.png" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
-
-										<!-- Row -->
-										<div class="vc_row full">
-
-											<div class="container">
-
-												<figure class="has-animation" data-delay="50" >
-													<img src="images/projects/fifa05.png" alt="Image Title">
-												</figure>
-
-											</div>
-
-										</div>
-										<!--/Row -->
-
 										<!--/Row -->
 										<div class="vc_row row_padding_top">
 												<div class="container">
@@ -317,22 +262,7 @@
 										<!--/Row -->
 
 										<!--/Row -->
-										<div class="vc_row row_padding_top">
-												<div class="container">
-														<figure class="has-animation" data-delay="10" >
-															<!-- <div class="video-wrapper"> -->
-
-															<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
-																	<source src="motion/Diversity.mp4" type="video/mp4">
-															</video>
-														<!-- </div> -->
-														</figure>
-												</div>
-										</div>
-										<!--/Row -->
-
-										<!--/Row -->
-										<div class="vc_row row_padding_top">
+										<div class="vc_row row_padding_top row_padding_bottom">
 												<div class="container">
 														<figure class="has-animation" data-delay="10" >
 															<!-- <div class="video-wrapper"> -->
@@ -346,18 +276,18 @@
 										</div>
 										<!--/Row -->
 
-										<!--/Row -->
-										<div class="vc_row row_padding_top">
-												<div class="container">
-														<figure class="has-animation" data-delay="10" >
-															<!-- <div class="video-wrapper"> -->
 
-															<video style="height:auto;width:100%" id="myVideo" autoplay muted loop preload="auto" >
-																	<source src="motion/Collaboration.mp4" type="video/mp4">
-															</video>
-														<!-- </div> -->
-														</figure>
-												</div>
+										<!-- Row -->
+										<div class="vc_row full">
+
+											<div class="container">
+
+												<figure class="has-animation" data-delay="50" >
+													<img src="images/projects/fifa05.png" alt="Image Title">
+												</figure>
+
+											</div>
+
 										</div>
 										<!--/Row -->
 
