--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
                                         <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
@@ -117,82 +118,81 @@
                         <div id="showcase-slider" class="swiper-container">
                             <div class="swiper-wrapper">
 
-
-                                <!-- Section Slide -->
-                                <div class="swiper-slide active" data-number="01" data-slide="1">
-                                    <a class="ajax-link-project" data-type="page-transition" href="globljam.html">
-                                    	<div class="slide-title" data-number="01"><span>GLOBL JAM</span></div>
-                                    </a>
-                                    <div class="slide-caption" data-slide-caption="1">Introducing Canada Basketball’s first annual Next Gen U23 Tournament in Toronto.</div>
-                                </div>
-                                <!--/Section Slide -->
-
-																<!-- Section Slide -->
-                                <!-- <div class="swiper-slide" data-number="02" data-slide="2">
-                                    <a class="ajax-link-project" data-type="page-transition" href="project01.html">
-                                    	<div class="slide-title" data-number="02"><span>Change the Game 2.0</span></div>
-                                    </a>
-                                    <div class="slide-caption" data-slide-caption="2">A creative refresh for MLSE Foundation's Change the Game, an evergreen campaign with a holisitc messaging of leaving no player behind.</div>
-                                </div> -->
-                                <!--/Section Slide -->
+															<!-- Section Slide -->
+															<div class="swiper-slide active" data-number="01" data-slide="1">
+																	<a class="ajax-link-project" data-type="page-transition" href="changethegame.html">
+																		<div class="slide-title" data-number="01"><span>Change the Game 2.0</span></div>
+																	</a>
+																	<div class="slide-caption" data-slide-caption="1">Introducing Canada Basketball’s first annual Next Gen U23 Tournament in Toronto.</div>
+															</div>
+															<!--/Section Slide -->
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="02" data-slide="2">
-                                    <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
-                                    	<div class="slide-title" data-number="02"><span>FIFA 2026</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="globljam.html">
+                                    	<div class="slide-title" data-number="02"><span>Globl Jam</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="2">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
+                                    <div class="slide-caption" data-slide-caption="2">Introducing Canada Basketball’s first annual Next Gen U23 Tournament in Toronto.</div>
                                 </div>
                                 <!--/Section Slide -->
 
-
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="03" data-slide="3">
-                                    <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
-                                    	<div class="slide-title" data-number="03"><span>Raptors Tunnel</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="fifa-2026.html">
+                                    	<div class="slide-title" data-number="03"><span>FIFA 2026</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="3">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
+                                    <div class="slide-caption" data-slide-caption="3">A creative package designed for Toronto’s FIFA World Cup 2026 host city bid.</div>
                                 </div>
                                 <!--/Section Slide -->
 
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="04" data-slide="4">
-                                    <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
-                                    	<div class="slide-title" data-number="04"><span>Mad Love</span></div>
+                                    <a class="ajax-link-project" data-type="page-transition" href="raptors-tunnel.html">
+                                    	<div class="slide-title" data-number="04"><span>Raptors Tunnel</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="4">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
+                                   	<div class="slide-caption" data-slide-caption="4">Re-skinning the Toronto Raptors iconic tunnel in the Scotiabank Arena.</div>
+                                </div>
+                                <!--/Section Slide -->
+
+
+                                <!-- Section Slide -->
+                                <div class="swiper-slide" data-number="05" data-slide="5">
+                                    <a class="ajax-link-project" data-type="page-transition" href="mad-love.html">
+                                    	<div class="slide-title" data-number="05"><span>Mad Love</span></div>
+                                    </a>
+                                    <div class="slide-caption" data-slide-caption="5">A social campaign for Canada Basketball to bring awareness to women athletes in basketball and beyond.</div>
                                 </div>
                                 <!--/Section Slide -->
 
 
                                <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="05" data-slide="5">
+                                <div class="swiper-slide" data-number="06" data-slide="6">
                                     <a class="ajax-link-project" data-type="page-transition" href="pcexpress.html">
-                                    	<div class="slide-title" data-number="05"><span>PC Express</span></div>
+                                    	<div class="slide-title" data-number="06"><span>PC Express</span></div>
                                     </a>
-                                    <div class="slide-caption" data-slide-caption="5">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
+                                    <div class="slide-caption" data-slide-caption="6">Designed digital creative at Loblaw Digital for Canada's simplest and most delightful online shopping experience, PC Express.</div>
 
                                 </div>
                                 <!--/Section Slide -->
 
 
                                 <!-- Section Slide -->
-                                <div class="swiper-slide" data-number="06" data-slide="6">
+                                <div class="swiper-slide" data-number="07" data-slide="7">
                                     <a class="ajax-link-project" data-type="page-transition" href="project06.html">
-                                   		<div class="slide-title" data-number="06"><span>Fashion Tech.</span></div>
+                                   		<div class="slide-title" data-number="07"><span>Fashion Tech.</span></div>
                                     </a>
-                                   	<div class="slide-caption" data-slide-caption="6">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
+                                   	<div class="slide-caption" data-slide-caption="7">UX/UI and brand identity created for the Women in Fashion Technology program at Fashion Exchange Toronto.</div>
 
                                 </div>
                                 <!--/Section Slide -->
 
 																<!-- Section Slide -->
-																<div class="swiper-slide" data-number="07" data-slide="7">
+																<div class="swiper-slide" data-number="08" data-slide="8">
 																		<a class="ajax-link-project" data-type="page-transition" href="misc.html">
-																			<div class="slide-title" data-number="07"><span>Misc.</span></div>
+																			<div class="slide-title" data-number="08"><span>Misc.</span></div>
 																		</a>
-																		<div class="slide-caption" data-slide-caption="7">A collection of work across my career as a designer.</div>
+																		<div class="slide-caption" data-slide-caption="8">A collection of work across my career as a designer.</div>
 
 																</div>
 																<!--/Section Slide -->
@@ -207,7 +207,16 @@
                     <div id="image-slider">
                     	<div class="image-slider-wrapper">
 
-														<div class="slider-img" data-slide="1" data-src="images/globljam-hero.jpg">
+														<div class="slider-img" data-slide="1" data-src="images/changethegame-title.jpg">
+															<div class="hero-video-wrapper">
+																		<video loop muted class="bgvid">
+																				<source src="motion/CTGFred_1200x630.mp4" type="video/mp4">
+										<source src="motion/CTGFred_1200x630.mp4" type="video/webm">
+																		</video>
+																</div>
+														</div>
+
+														<div class="slider-img" data-slide="2" data-src="images/globljam-hero.jpg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/CBxSN_Transition.mp4" type="video/mp4">
@@ -216,16 +225,7 @@
                                 </div>
                             </div>
 
-														<!-- <div class="slider-img" data-slide="2" data-src="images/toronto-fifa-hero.jpeg">
-                            	<div class="hero-video-wrapper">
-                                    <video loop muted class="bgvid">
-                                        <source src="motion/CTGFred_1200x630.mp4" type="video/mp4">
-										<source src="motion/CTGFred_1200x630.mp4" type="video/webm">
-                                    </video>
-                                </div>
-                            </div> -->
-
-                            <div class="slider-img" data-slide="2" data-src="images/toronto-fifa-hero.jpeg">
+                            <div class="slider-img" data-slide="3" data-src="images/toronto-fifa-hero.jpg">
                             	<div class="hero-video-wrapper">
                                     <video loop muted class="bgvid">
                                         <source src="motion/Transistion-Set.mp4" type="video/mp4">
@@ -234,11 +234,11 @@
                                 </div>
                             </div>
 
-														<div class="slider-img" data-slide="3" data-src="images/raptors-tunnel-hero.jpg"></div>
-                            <div class="slider-img" data-slide="4" data-src="images/madlove-hero.jpg"></div>
-														<div class="slider-img" data-slide="5" data-src="images/pcx-hero.jpg"></div>
-                            <div class="slider-img" data-slide="6" data-src="images/fashiontech-hero.jpg"></div>
-														<div class="slider-img" data-slide="7" data-src="images/misc-hero.png"></div>
+														<div class="slider-img" data-slide="4" data-src="images/raptors-tunnel-hero.jpg"></div>
+                            <div class="slider-img" data-slide="5" data-src="images/madlove-hero.jpg"></div>
+														<div class="slider-img" data-slide="6" data-src="images/pcx-hero.jpg"></div>
+                            <div class="slider-img" data-slide="7" data-src="images/fashiontech-hero.jpg"></div>
+														<div class="slider-img" data-slide="8" data-src="images/misc-hero.png"></div>
                         </div>
                     </div>
                     <!--/Showcase Gallery -->
@@ -254,7 +254,7 @@
             <footer class="fixed">
                 <div id="footer-container">
 
-                    <div id="counter-wrap" data-hover="07">
+                    <div id="counter-wrap" data-hover="08">
                     		<span data-slide-count="1">01</span>
                         <span data-slide-count="2">02</span>
                         <span data-slide-count="3">03</span>
@@ -262,6 +262,7 @@
                         <span data-slide-count="5">05</span>
                       	<span data-slide-count="6">06</span>
 												<span data-slide-count="7">07</span>
+												<span data-slide-count="7">08</span>
                     </div>
 
                     <div class="socials-wrap">
