--- a/misc.html
+++ b/misc.html
@@ -74,7 +74,8 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
-                                        <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
                                         <li><a class="ajax-link" href="mad-love.html" data-type="page-transition">Mad Love x Canada Basketball</a></li>
@@ -151,7 +152,7 @@
 								<!--/Row -->
 
 								<!-- Row -->
-								<div class="vc_row full">
+								<div class="vc_row">
 
 										<div class="container has-animation" data-delay="100">
 
@@ -191,12 +192,12 @@
 												</div>
 
 												<!-- Collage item with pop-up -->
-												<div class="collage-thumb">
+												<!-- <div class="collage-thumb">
 														<a class="image-link" href="images/projects/bhm04.jpg">
-																<img src="images/projects/bhm04.jpg" alt="img" />
+																<img src="images/projects/bhm04.jpg" alt="img"/>
 																<h6><div class="thumb-info">Player Helmet Decal</div></h6>
 														</a>
-												</div>
+												</div> -->
 
 										</div>
 										<!--/Collage -->
