--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 																	<a class="ajax-link-project" data-type="page-transition" href="changethegame.html">
 																		<div class="slide-title" data-number="01"><span>Change the Game 2.0</span></div>
 																	</a>
-																	<div class="slide-caption" data-slide-caption="1">Introducing Canada Basketball’s first annual Next Gen U23 Tournament in Toronto.</div>
+																	<div class="slide-caption" data-slide-caption="1">Tomorrow is built today. Invest in our future all-stars and
+hometown heroes, leaving no player behind.</div>
 															</div>
 															<!--/Section Slide -->
 
