--- a/changethegame.html
+++ b/changethegame.html
@@ -74,6 +74,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">work</a>
 																			<ul>
+																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
                                         <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
 																				<li><a class="ajax-link" href="fifa-2026.html" data-type="page-transition">Toronto x FIFA World Cup 2026</a></li>
                                         <li><a class="ajax-link" href="raptors-tunnel.html" data-type="page-transition">Toronto Raptors x Hudson's Bay Tunnel</a></li>
@@ -153,7 +154,7 @@
 												<div class="container">
 
 													<p>project</p>
-													<h5 class="has-animation" data-delay="10">A creative refresh for MLSE Foundation's Change the Game. A transmedia campaign with a consistent unified intent in investing in our future all-stars and hometown heroes, leaving no player behind.</h5>
+													<h5 class="has-animation" data-delay="10">A creative refresh for MLSE Foundation's Change the Game. A transmedia campaign with a consistent effort to invest in our future all-stars and hometown heroes, leaving no player behind.</h5>
 
 												</div>
 
@@ -221,7 +222,7 @@
 											<div class="container">
 												<div class="has-animation" data-delay="150">
 													<p>OBJECTIVE</p>
-													<h5 class="has-animation">In 2020, CTG 1.0 drove awareness to the systemic barriers preventing youth from reaching their potential. But, without enterprise-wide department integration and support, the campaign hadn’t yet reached it’s full potential. The new goal is to rally our fans and partners to fundraise <h7>$30M in 4 YEARS</h7></h5>
+													<h5 class="has-animation">In 2020, CTG 1.0 drove awareness to the systemic barriers preventing youth from reaching their potential. But, without enterprise-wide department integration and support, the campaign hadn’t yet reached it’s full potential. The new goal is to rally our fans and partners to fundraise <h7>$30M in 4 YEARS.</h7></h5>
 												</div>
 											</div>
 
