--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                         <div class="outer">
                             <div class="inner">
                                 <ul data-breakpoint="1025" class="flexnav">
-                                    <li class="link menu-timeline active"><a class="link" href="#">work</a>
+                                    <li class="link menu-timeline active"><a class="link" href="#">portfolio</a>
                                       <ul>
 																				<li><a class="ajax-link" href="changethegame.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
 																				<li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
@@ -83,7 +83,7 @@
 																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
 																			</ul>
                                     </li>
-                                    <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">say hello</a></li>
+                                    <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">about</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -113,8 +113,9 @@
                     <div id="hero-styles" class="parallax-onscroll">
                         <div id="hero-caption" class="">
                             <div class="inner">
-                                <!-- <h1 class="hero-title">Our <br class="destroy"><span>Office</span></h1>
-                                <h2 class="hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2> -->
+                                <!-- <h2 class="hero-title">Sonica Katoch is a multidisciplinary designer with experience in branding and design. Focus is to create meaningful brand identities and design solutions through the lens of sport, music, art, and culture. Currently A DESIGNER AT MAPLE LEAF SPORTS & ENTERTAINMENT BASED IN TKARONTO/TORONTO.</h2>
+                                <h2 class="	hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2>
+																<a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline has-animation link"><h5>say hello<img class="icon" src="icons/waving-hand.png" alt="Icon"></h5></a> -->
                             </div>
                         </div>
                     </div>
@@ -130,18 +131,14 @@
                     <div class="vc_row">
                         <div class="container">
 
-                            <h2><a style="color:#35FF69;">Sonica Katoch</a> is currently a Designer at Maple Leaf Sports & Entertainment based in Tkaronto/Toronto.</h2>
-														<!-- <h2>Sonica Katoch is a Designer creating experiences in the world of sports, art, music and culture at Maple Leaf Sports & Entertainment based in Toronto.</h2> -->
-
+                            <h2><a style="color:#35FF69;">Sonica Katoch</a> is a multidisciplinary designer with experience in branding and design. Focus is to create meaningful brand identities and design solutions through the lens of sport, music, art, and culture. Currently A DESIGNER AT MAPLE LEAF SPORTS & ENTERTAINMENT BASED IN TKARONTO/TORONTO.</h2>
                         </div>
                     </div>
-                    <!--/Row -->
+                    <!-- /Row -->
 
 										<div class="vc_rowrow_padding_top row_padding_bottom">
 
 											<div class="container">
-
-												<!-- <h2 class="has-animation" data-delay="10">Whatever your needs, we're looking forward <br class="destroy"> to hearing from you</h2> -->
 
 												<a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline has-animation link"><h5>say hello<img class="icon" src="icons/waving-hand.png" alt="Icon"></h5></a>
 
