--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="outer">
                             <div class="inner">
                                 <ul data-breakpoint="1025" class="flexnav">
-                                    <li class="link menu-timeline active"><a class="link" href="#">work</a>
+                                    <li class="link menu-timeline active"><a class="link" href="#">portfolio</a>
 																			<ul>
 																				<li><a class="ajax-link" href="changethegame.html" data-type="page-transition">Change the Game 2.0 x MLSE Foundation</a></li>
                                         <li><a class="ajax-link" href="globljam.html" data-type="page-transition">Globl Jam x Canada Basketball</a></li>
@@ -84,7 +84,7 @@
 																				<li><a class="ajax-link" href="misc.html" data-type="page-transition">Misc.</a></li>
                                       </ul>
                                     </li>
-                                    <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">say hello</a></li>
+                                    <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">about</a></li>
                                 </ul>
                             </div>
                         </div>
