--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
                     <div class="vc_row">
                         <div class="container">
 
-                            <h2><a style="color:#35FF69;">Sonica Katoch</a> is a multidisciplinary designer with experience in branding and design. Focus is to create meaningful brand identities and design solutions through the lens of sport, music, art, and culture. Currently A DESIGNER AT MAPLE LEAF SPORTS & ENTERTAINMENT BASED IN TKARONTO/TORONTO.</h2>
+                            <h2><a style="color:#35FF69;">Sonica</a> is a multidisciplinary designer with experience in branding and design. Her focus is to develop impactful brand identities and explore creative design solutions through powerful storytelling. Her perspective ranges in sport, music, art and culture. She is currently a Designer at Maple Leaf Sports & Entertainment based in TKARONTO/TORONTO.</h2>
                         </div>
                     </div>
                     <!-- /Row -->
